update: update the inventory service to also have the same product structure,. fix the api-gateway inventory-handler to have the same success and error response
